<?xml version="1.0" encoding="UTF-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#476798">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="#476798">

        <EditText
            android:id="@+id/username_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/username_txt"
            android:layout_alignBottom="@+id/username_txt"
            android:layout_alignParentRight="true"
            android:hint="@string/username_et"
            android:ems="10" >

        </EditText>

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/password_txt"
            android:layout_alignBottom="@+id/password_txt"
            android:layout_alignParentRight="true"
            android:layout_alignLeft="@+id/username_edit_text"
            android:hint="@string/password_et"
            android:password="true"
            android:maxLines="1"
            android:ems="10" >
        </EditText>

        <TextView
            android:id="@+id/username_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/login_button"
            android:layout_below="@+id/imageView1"
            android:layout_marginTop="40dp"
            android:text="@string/username" />

        <TextView
            android:id="@+id/password_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/login_button"
            android:layout_below="@+id/username_edit_text"
            android:layout_marginTop="30dp"
            android:text="@string/password" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/checkBox2"
            android:layout_marginTop="20dp"
            android:background="@drawable/normal"
            android:text="@string/login" />

        <TextView
            android:id="@+id/signin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/login_button"
            android:layout_marginTop="20dp"
            android:textSize="18dp"
            android:text="@string/register" />

        <TextView
            android:id="@+id/about_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/login_button"
            android:layout_marginTop="20dp"
            android:textSize="18dp"
            android:text="@string/about" />

        <TextView
            android:id="@+id/change_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/signin_button"
            android:layout_marginTop="20dp"
            android:textSize="18dp"
            android:text="@string/change" />

        <TextView
            android:id="@+id/forgot_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/change_button"
            android:layout_marginTop="20dp"
            android:textSize="18dp"
            android:text="@string/forgot" />

        <TextView
            android:id="@+id/resend_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/forgot_button"
            android:layout_marginTop="20dp"
            android:textSize="18dp"
            android:text="@string/resend" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"

            android:src="@drawable/logo" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/password_txt"
            android:layout_marginTop="20dp"
            android:checked="true"
            android:text="@string/remember" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/checkBox1"
            android:layout_marginTop="1dp"
            android:checked="true"
            android:text="@string/stay_logged_in" />

    </RelativeLayout>
</ScrollView>